--- a/Biodata.html
+++ b/Biodata.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Biodata</title>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
     <div class="Konten">
@@ -17,12 +18,13 @@
             <h6>Hello Everybody, i am</h6>
             <h3>Andika Dicky Saputra</h3>
             <h4>Mahasiswa Informatika</h4>
-            <p>Perkenalkan, saya Dika, gemar bermain game mobile, membaca artikel teknologi, dan ini adalah personal informasi tentang saya</p>
-                <ul class="list basic_info">
-                    <li><a><i class="fa fa-calendar" style="font-size:24px"></i> 13 November 1997 </a></li>
-                    <li><a><i class="fa fa-mobile-phone" style="font-size:34px"></i> +62-812-8247-6763 </a></li>
-                    <li><a><i class="fa fa-envelope-o" style="font-size:24px"></i> ndkdicky@gmail.com </a></li>
-                    <li><a><i class="fa fa-home" style="font-size:26px"></i> Poncol Jaya, South Jakarta </a></li>
+            <hr>
+            <p>Perkenalkan, saya Dika, gemar bermain game mobile, membaca artikel teknologi, dan ini adalah personal informasi tentang saya: </p>
+                <ul class="fa-ul">
+                    <li><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>13 November 1997</li>
+                    <li><span class="fa-li"><i class="fas fa-phone"></i></span>+62-812-8247-6763</li>
+                    <li><span class="fa-li"><i class="fas fa-envelope-open-text"></i></span>ndkdicky@gmail.com</li>
+                    <li><span class="fa-li"><i class="fas fa-home"></i></span>Jln. Poncol Jaya. Jakarta Selatan, 12710</li>
                 </ul>
         </div>
     </div>
